--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!---Header, navigation, mail, phone-->
-    <header class="header conteiner">
+    <!-- <header class="header conteiner">
         <div class="header__conteiner">
             <nav class="header__nav">
                 <a lang="en" href="./" class="link header__logo">
@@ -49,17 +49,17 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <main>
         <!---Hero-->
-            <section class="hero hero__section">
+            <!-- <section class="hero hero__section">
                 <div class="conteiner">
                     <h1 class="hero__title">Эффективные решения<br>для вашего бизнеса</h1>
                     <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
                 </div>
-            </section>
+            </section> -->
         <!---Features-->
-            <section class="section features">
+            <!-- <section class="section features">
                 <div class="conteiner">
                     <h2 class="visually-hidden">Особенности</h2>
                     <ul class="list features__content">
@@ -109,9 +109,9 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
         <!---Our Job-->
-        <section class="ourjob__section">
+        <!-- <section class="ourjob__section">
             <div class="conteiner">
                 <h2 class="ourjob__title">Чем мы занимаемся</h2>
                 <ul class="list ourjob__list">
@@ -126,7 +126,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!---The team-->
         <section class="section team-section-bg">
             <div class="conteiner">
@@ -292,7 +292,7 @@
             </div>
         </section>
         <!-- Clients -->
-        <section class="clients-section">
+        <!-- <section class="clients-section">
             <div class="conteiner clients-conteiner">
                 <h2 class="team-title">Постоянные клиенты</h2>
                 <ul class="list clients-content">
@@ -341,10 +341,10 @@
                 </ul>
 
             </div>
-        </section>
+        </section> -->
     </main>
     <!---Footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="conteiner footer-conteiner">
             <div class="footer-address-wrapper">
                 <div class="footer-logo">
@@ -413,7 +413,7 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!---END Footer-->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
